--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
   <div class="wrapper">
     <div class="header">
-        <h1><a href="/">{{ site.title }}</a></h1>
-        <nav>
+        <h1 class="title-text"><a href="/">DURGA KULLAKANDA</a></h1>
+        <nav class="menu-items">
             {% for item in site.data.navigation %}
                 <a href="{{ item.url }}">{{ item.title }}</a>
                 {% unless forloop.last %}/{% endunless %}
