--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -6,7 +6,7 @@
 }
 
 .site-header {
-  margin-top: 20px;
+  margin-top: 30px;
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
 
@@ -298,8 +298,11 @@
 }
 
 .post-list{
-  border-top: 1px solid;
-  border-bottom: 1px solid;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  margin-top: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .display-img{
@@ -340,4 +343,21 @@
   justify-content: space-between;
   align-items: baseline;
   line-height: 1;
+}
+
+/* DURGA KULLAKANDA */
+.title-text a{
+  color: black;
+  text-decoration: none;
+  font-family: 'Teko', sans-serif;
+}
+
+/* MENU ITEMS */
+.menu-items a{
+  color: black;
+  font-family: 'Roboto Slab', serif;
+}
+
+body{
+  font-family: 'Roboto Slab', serif;
 }
