--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <nav class="menu-items">
             {% for item in site.data.navigation %}
                 <a href="{{ item.url }}">{{ item.title }}</a>
-                {% unless forloop.last %}/{% endunless %}
+                {% unless forloop.last %}<span id="separator">|</span>{% endunless %}
             {% endfor %}
         </nav>
     </div>
