--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,7 +10,7 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #000 !default;
+$text-color:       #4e4e4e !default;
 $background-color: #FFF !default;
 $brand-color:      #2a7ae2 !default;
 
