--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -316,10 +316,12 @@
 }
 
 .left {
-  width: 20%;
+  width: 100px;
+  position: absolute;
 }
 
 .right {
+  margin-left: 100px;
 }
 
 /* Clear floats after the columns */
