main page update

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -351,6 +351,11 @@
   margin-bottom: 0px;
 }
 
+.main-heading{
+  text-align: center;
+  font-weight: 900;
+  margin-bottom: 5px;
+}
 /* MENU ITEMS */
 .menu-items a{
   color: #00A3E9;
@@ -359,18 +364,8 @@
   font-size: 22px;
 }
 
-.separator{
-  color: red;
-}
-
 body{
   font-family: 'Roboto Condensed', serif;
-}
-
-.post-list-header{
-  text-align: center;
-  font-weight: 900;
-  margin-bottom: 5px;
 }
 
 /*   DROP CAPS
