--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -393,7 +393,7 @@ body{
      width: 100%;
      background-size: cover;
      background-position: center;
-     transition: all 0.5s ease;
+     transition: transform 1s ease;
      background-image: url('/assets/img/durga.jpg');
 }
 .inner-div:hover
