--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,6 @@
   {%- seo -%}
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Teko:600" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   {%- feed_meta -%}
 </head>
