--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header class="site-header">
+<head er class="site-header">
   <h3 class="site-title">
-    <a href="{{ site.github.url }}/">{{ site.title }}</a>
+    <a href="{{ site.github.url }}/"><img src="assets/img/signature.png"/></a>
   </h3>
   <nav class="menu-list">
     {% for item in site.data.settings.menu %}
