--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,5 @@
-<head er class="site-header">
-  <h3 class="site-title">
-    <a href="{{ site.github.url }}/"><img src="signature.png"/></a>
-  </h3>
+<header class="site-header">
+  <a href="{{ site.github.url }}/"><img src="signature.png"></a>
   <nav class="menu-list">
     {% for item in site.data.settings.menu %}
       <a href="{{ site.github.url }}/{{ item.folder }}/{{ item.file }}" class="menu-link">{{ item.name }}</a>
