--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <a href="{{ site.github.url }}/"><img src="assets/img/signature.png"></a>
+  <a href="{{ site.github.url }}/"><img width="100px" src="assets/img/signature.png"></a>
   <nav class="menu-list">
     {% for item in site.data.settings.menu %}
       <a href="{{ site.github.url }}/{{ item.folder }}/{{ item.file }}" class="menu-link">{{ item.name }}</a>
