--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,14 @@
 <head>
 
   <title>
-    {% if page.title == "Home" %}
-      {{ site.title }}
+    {% if page.title %}
+      {% if page.title == "Home"%}
+        {{ site.title }}
+     {% else %}
+        {{ page.title }} | {{ site.title }}
+      {% endif %}
     {% else %}
-      {{ page.title }} | {{ site.title }}
+      {{ site.title }}
     {% endif %}
   </title>
 
