--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: default
 title: Home
 ---
 
+<img width ="60%" align="right" src="{{ site.github.url }}/assets/img/durgaside.png" style="padding-left: 30px; padding-bottom: 10px; padding-top: 10px;">
+<p> Millennial is a minimalist Jekyll themddde. The purpose of this theme is to provide a simple, clean, content-focused publishing platform for your publication site or blog. You can find everything you need to get started under documentation. For more information on how to install and use this theme, check out [the documea simple, clean, content-focused publishing platform for your publication site or blog. You  a simple, clean, content-focused publishing platform for your publication site or blog. You  a simple, clean, content-focused publishing platform for your publication site or blog. You  a simple, clean, content-focused publishing platform for your publication site or blog. You </p>
 
 {% for post in site.posts %}
 
