--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,12 @@ layout: default
 title: Home
 ---
 
-<img width ="60%" align="right" src="{{ site.github.url }}/assets/img/durgaside.png" style="padding-left: 30px; padding-bottom: 10px; padding-top: 10px;">
-<p> Millennial is a minimalist Jekyll themddde. The purpose of this theme is to provide a simple, clean, content-focused publishing platform for your publication site or blog. You can find everything you need to get started under documentation. For more information on how to install and use this theme, check out [the documea simple, clean, content-focused publishing platform for your publication site or blog. You  a simple, clean, content-focused publishing platform for your publication site or blog. You  a simple, clean, content-focused publishing platform for your publication site or blog. You  a simple, clean, content-focused publishing platform for your publication site or blog. You </p>
+<div class="home-wrapper">
+<h1>Welcome</h1>
+<p>
+  The Inter-Allied Women's Conference (also known as the Suffragist Conference of the Allied Countries and the United States)[Notes 1] opened in Paris on 10 February 1919. It was convened parallel to the Paris Peace Conference to introduce women's issues to the peace process after the First World War. Leaders in the international women's suffrage movement had been denied the opportunity to participate in the official proceedings several times before being allowed to make a presentation before the Commission on International Labour Legislation. On 10 April, women were finally allowed to present a resolution to the League of Nations Commission. It covered the trafficking and sale of women and children, their political and suffrage status, and the transformation of education to include the human rights of all persons in each nation.
+</p>
+</div>
 
 {% for post in site.posts %}
 
