--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,13 @@
   </h3>
   <nav class="menu-list">
     <a href="{{ site.github.url }}/" class="menu-link"></a>
+    <a href="{{ site.github.url }}/" class="menu-link">Home</a>
     {% for item in site.data.settings.menu %}
       <a href="{{ site.github.url }}/{{ item.folder }}/{{ item.file }}" class="menu-link">{{ item.name }}</a>
     {% endfor %}
+
+    <span id="menu-separator">&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspContact:
+    </span>
 
     {% for item in site.data.settings.social %}
       <a href="{{ item.link }}" class="menu-link" target="_blank"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
