--- a/assets/css/_sass/_default.scss
+++ b/assets/css/_sass/_default.scss
@@ -6,6 +6,7 @@
   width: $container-width;
   margin-left: auto;
   margin-right: auto;
+  background-color: #FFF;
 }
 .container a {
   text-decoration: underline;
