--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -1,3 +1,11 @@
+.home-wrapper{
+  width: 80%;
+  margin: auto;
+}
+.featured-pic {
+  align: left;
+}
+
 .featured-posts {
   height: 150px;
   margin: 5px 10px 10px;
@@ -6,8 +14,8 @@
   background-size: cover;
   position: relative;
   transition: filter .1s ease-in-out;
-  -webkit-filter: grayscale(100%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
-  filter: grayscale(100%); /* FF 35+ */
+  -webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
+  filter: grayscale(0%); /* FF 35+ */
 }
 
 .featured-posts:hover {
