--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ title: Home
 <div class="home-wrapper">
 <h1>Welcome</h1>
 <p>
-  The Inter-Allied Women's Conference (also known as the Suffragist Conference of the Allied Countries and the United States)[Notes 1] opened in Paris on 10 February 1919. It was convened parallel to the Paris Peace Conference to introduce women's issues to the peace process after the First World War. Leaders in the international women's suffrage movement had been denied the opportunity to participate in the official proceedings several times before being allowed to make a presentation before the Commission on International Labour Legislation. On 10 April, women were finally allowed to present a resolution to the League of Nations Commission. It covered the trafficking and sale of women and children, their political and suffrage status, and the transformation of education to include the human rights of all persons in each nation.
+  Sed vestibulum velit et consequat rhoncus. Vestibulum condimentum leo eu sapien ornare rhoncus. Cras vitae dignissim nibh, et dignissim risus. Vivamus convallis diam vel sapien porta aliquet. Mauris suscipit mauris rutrum, accumsan diam ut, blandit tellus. Curabitur lacus nibh, ullamcorper ac suscipit et, vulputate ac felis. In molestie nibh a lacus condimentum malesuada. Mauris vulputate enim odio, a porttitor neque venenatis non. Morbi feugiat justo sed enim dignissim, id feugiat leo elementum. Cras rhoncus ut dui at tincidunt. In ac mauris commodo, euismod leo in, pellentesque eros.
 </p>
 </div>
 
