--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,8 @@
 layout: default
 title: Home
 ---
-
 <div class="home-wrapper">
-<h1>Welcome</h1>
+<h2>Welcome!</h2>
 <p>
   Sed vestibulum velit et consequat rhoncus. Vestibulum condimentum leo eu sapien ornare rhoncus. Cras vitae dignissim nibh, et dignissim risus. Vivamus convallis diam vel sapien porta aliquet. Mauris suscipit mauris rutrum, accumsan diam ut, blandit tellus. Curabitur lacus nibh, ullamcorper ac suscipit et, vulputate ac felis. In molestie nibh a lacus condimentum malesuada. Mauris vulputate enim odio, a porttitor neque venenatis non. Morbi feugiat justo sed enim dignissim, id feugiat leo elementum. Cras rhoncus ut dui at tincidunt. In ac mauris commodo, euismod leo in, pellentesque eros.
 </p>
