--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -8,7 +8,7 @@
 
 .featured-posts {
   height: 150px;
-  margin: 5px 10px 10px;
+  margin: 10px 60px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
