--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -21,6 +21,7 @@
   text-decoration: none;
 }
 .site-title {
+  font-family: 'Montserrat', sans-serif;
   font-size: 26px;
   font-weight: 900;
   line-height: 56px;
