--- a/style.css
+++ b/style.css
@@ -102,3 +102,14 @@ h1{
     width: 60px !important;
     max-width: 60px;
 }
+#gameWon{
+    display: none;
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(68, 68, 68);
+    color: white;
+}
