--- a/style.css
+++ b/style.css
@@ -93,6 +93,12 @@ a {
     padding: 0px;
     border-radius: 10px;
 }
+
+.keyboard button:active {
+    outline: #0ec972 auto 5px !important;  
+    background-color: white !important;
+}
+
 .kbrow .btn-secondary{
     background-color: rgb(34, 34, 34);
     color:rgb(165, 165, 165);
