--- a/style.css
+++ b/style.css
@@ -95,15 +95,28 @@ a {
 }
 
 .kbplaceholder{
-    min-height: 180px;
+    height: 200px;
 }
+
 .keyboard{
+    padding: 10px;
     position: fixed;
-    bottom: 5px;
+    bottom: 25px;
     left: 50%;
     transform: translate(-50%, 0);
     width: 100%;
     background-color: rgb(27, 27, 27);
+}
+
+@media only screen and (max-width: 600px){
+    .keyboard{
+        position: fixed;
+        bottom: 5px;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 100%;
+        background-color: rgb(27, 27, 27);
+    }
 }
 
 .keyboard button{
