--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ a {
     margin-bottom: 10px;
 }
 .display{
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
